Fix dashboard contrast

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -346,7 +346,6 @@ span.navbar-toggler-icon {
     border: solid 1px #292f38;
     border-radius: 5px;
     padding-top: 1rem;
-    background-color: #bbd1ea;
 }
 
 /* View Invoice */
